--- a/Libro.tex
+++ b/Libro.tex
@@ -3644,6 +3644,69 @@ Nella legenda troviamo: Globale, Asia dell'est, Sud Asia, Africa subsahariana, A
 
 In alternativa al vegetarianesimo troviamo il reducetarianesimo e flexitarianesimo,stili alimentari che si impegnano a ridurre il consumo di carne, i primi per l'ambiente e i secondi per la salute. La maggioranza delle persone che si identificano come vegetariane, spesso sono reducetariani o flexitariani, in quanto può capitare che durante l'anno consumino carne. Purtroppo, per anni, alcune forme di promozione del messaggio vegetariano e vegano hanno adottato toni giudicanti, che hanno allontanato le persone. Questo ha contribuito a creare un certo imbarazzo o diffidenza quando qualcuno si definisce vegetariano, anche se si chiarisce che non è intenzione giudicare le scelte alimentari altrui. Con il termine reducetariano si rimuove questa linea così netta tra un gruppo e l'altro, risultando più inclusivo.
 
+
+\begin{mdframed}[linewidth=1pt]
+Caccia
+
+La caccia, attualmente è utilizzata per fini ludici e per contenere la popolazione di animali. In Italia, uno degli animali che crea più preoccupazione è il cinghiale. Secondo dati ISPRA i cinghiali sono raddoppiati in 10 anni, passando da 500 mila del 2010 a 1 milione nel 2020 nonostante il numero dei cacciatori sia stabile dal
+1980\endnote{\raggedright\url{https://www.researchgate.net/publication/269636662\_Wild\_boar\_populations\_up\_numbers\_of\_hunters\_down\_A\_review\_of\_trends\_and\_implications\_for\_Europe}}. 
+
+Il cinghiale vive in gruppi familiari matriarcali, dove generalmente solo i due individui dominanti si riproducono. In una battuta si caccia questi individui sono i primi a morire, in quanto impegnati a far scappare giovani e cuccioli. In queste condizioni alterate dalla caccia, l'assenza delle figure dominanti, possono portare ad un numero maggiore di individui subalterni alla riproduzione. Inizia così una fase riproduttiva intensa, che vista la giovane età, può moltiplicare rapidamente la popolazione\endnote{\par 1) Apollonio M., R. Putman, S. Grignolio \& L. Bartoš 2011. Hunting seasons in relation to
+biological breeding seasons and the implications for the control or regulation of ungulate populations. In: M.
+Apollonio, R. Andersen \& R. Putman (eds.), Ungulate management in Europe: Problems and practices, Cambridge University
+Press, London, UK: 80-105.\par 2) Cahill S. \& D. Llimona 2004. Demographics of a wild boar Sus scrofa Linnaeus, 1758
+population on a metropolitan park in Barcelona. In: C. Fonseca, J. Herrero, A. Luís \& A. M. V. M. Soares (eds.), Wild
+boar research 2002, 4th International wild boar symposium, Galemys, 16 (n° especial): 37-52.\par 3) Canu A., Scandura,
+E. Merli, R. Chirichella, E. Bottero, F. Chianucci, A. Cutini \& M. Apollonio 2015. Reproductive phenology and
+conception synchrony in a natural wild boar population. Hystrix 26 (2): 77-84.\par 4) Dardaillon M. 1988. Wild boar
+social groupings and their seasonal changes in the Camargue, southern France. Z. Säugetierkunde 53: 22-30.\par 5)
+Delcroix I., R. Mauget \& J. P. Signoret 1990. Existence of synchronization of reproduction at the level of the social
+group of the European wild boar (Sus scrofa). J. Repr. Fert. 89: 613-617.\par 6) Eisenberg J. F. \& M. Lockhart 1972.
+An ecological reconnaisance of Wilpattu National Park, Ceylon. Smithsonian Inst. Press, Washington, D. C.\par 7)
+Gamelon M., A. Besnard, J.-M. Gaillard, S. Servanty, E. Baubet, S. Brandt \& O. Gimenez 2011. High hunting pressure
+selects for earlier birth date: wild boar as a case study. Evolution 65 (11): 3100-3112.\par 8) Gayet T., S. Devillard,
+M. Gamelon, S. Brandt, L. Say \& E. Baubet 2016. On the evolutionary consequences of increasing litter size with
+multiple paternity in wild boar (Sus scrofa scrofa). Evolution 70 (6): 1386–1397.\par 9) Graves H. B. 1984. Behaviour
+and Ecology of Wild and Feral Swine (Sus scrofa). Journal of Animal Science 58 (2): 482–492.\par 10) Herrero J., A.
+García-Serrano \& R. García-Gonzalez, 2008. Reproductive and demographic parameters in two Iberian wild boar Sus scrofa
+populations. Acta theriologica 53 (4): 355-364.\par 11) Istituto nazionale per la fauna selvatica (2002). Gli Ungulati
+in Italia. Status, distribuzione, consistenza, gestione e prelievo venatorio. Istituto nazionale per la fauna selvatica
+“Alessandro Chigi”, 61 pp.\par 12) Ježek M. 2012. The influence of sex mature of wild boar to reproduction in the Czech
+republic. Vliv pohlavního dospívání na reprodukci prasete divokého v České Republice. Doctoral thesis. Disertační
+práce. Praha, 72 pp.\par 13) Kaminski G., S. Brandt, E. Baubet \& C. Baudoin 2005. Life-history patterns in female wild
+boars (Sus scrofa): mother-daughter postweaning associations. Canadian Journal of Zoology 83: 474-480.\par 14) Marsan
+A., L. Schenone \& S. Spanò 2000. Il cinghiale in Liguria. II edizione. Regione Liguria, Struttura allevamento, caccia
+e pesca, 103 pp., 4 tavv.\par 15) Marsan A., S. Spanò \& C. Tognoni 1995. Management attempts of wild boar (Sus scrofa
+scrofa L.): first results and ongoing researches in Northern Apennines. Ibex 3: 219-221.\par 16) Massei G., J.
+Kindberg, A. Licoppe, D. Gačić, N. Šprem, J. Kamler, E. Baubet, U. Hohmann, A. Monaco, J. Ozoliņš, S. Cellina, T.
+Podgórski, C. Fonseca, N. Markov, B. Pokorny, C. Rosell \& A. Náhlik 2015. Wild boar populations up, numbers of hunters
+down? A review of trends and implications for Europe. Pest Management Science 71 (4): 492-500.\par 17) Mauget R. 1982.
+Seasonality of reproduction in the wild boar. In: D. J. A. Cole \& G. R. Foxcroft (eds.), Control of pig reproduction,
+Butterworth, London: 509–526.\par 18) Mazzoni della Stella R., F. Calovi \& L. Burrini 1995. The wild boar management
+in a province of the Central Italy. Ibex 3: 213-216.\par 19) Meynhardt H. 1986. Schwarzwild-Report. Mein Leben unter
+Wildschweinen. Naumann, Leipzig, 223 pp.\par 20) Moretti M. 1995. Birth distribution, structure and dynamics of a
+hunted mountain population of wild boars (Sus scrofa L.), Ticino, Switzerland. Ibex 3: 192-196.\par 21) Oliver W. \& K.
+Leus 2011. Sus scrofa. IUCN Red List of threatened species, version 2011.2, 6 pp.\par 22) Scillitani L., A. Monaco \&
+S. Toso 2010. Do intensive drive hunts affect wild boar (Sus scrofa) spatial behaviour in Italy? Some evidences and
+management implications. European Journal of Wildlife Research 56 (3): 307–318.\par 23) Servanty S., J.-M. Gaillard, C.
+Toïgo, S. Brandt \& E. Baubet 2009. Pulsed resources and climate-induced variation in the reproductive traits of wild
+boar under high hunting pressure. J. animal ecology 78 (6): 1278-1290.\par 24) Thurfjell H., G. Spong \& G. Ericsson
+2013. Effects of hunting on wild boar Sus scrofa behaviour. Wildlife Biology 19 (1): 87-93.\par 25) Toïgo C., S.
+Servanty, J.-M. Gaillard, S. Brandt \& E. Baubet 2008. Disentangling natural from hunting mortality in an intensively
+hunted wild boar population. J. Wildlife Management 72 (7): 1532-1539.\par 26) Scillitani L., A. Monaco \& S. Toso
+2010. Do intensive drive hunts affect wild boar (Sus scrofa) spatial behaviour in Italy? Some evidences and management
+implications. European Journal of Wildlife Research 56 (3): 307–318. }. 
+
+In condizioni favorevoli, alcuni ecosistemi mostrano una buona capacità di resilienza, ma il ritorno a un equilibrio ecologico non è garantito né sempre spontaneo. In Italia negli ultimi anni si sta assistendo a una ricomparsa del lupo, unico predatore dei grandi ungulati e non solo, infatti questo animale è utile al contenimento di altre specie invasive come le nutrie. 
+Servirà diverso tempo prima che i lupi possano formare branchi numerosi in grado di cacciare grandi prede selvatiche, portandoli in alcuni casi a rivolgersi a più facili prede domestiche, dalle pecore ai piccoli cani. In un ecosistema in equilibrio, la densità dei carnivori tende ad autoregolarsi in funzione delle prede disponibili.
+
+Una ricerca del Wwf condotta in Svizzera ha osservato che i lupi ogni anno uccidono circa 200 pecore non protette da recinto elettrificato e, ne muoiono per malattia o cadute dai precipizi circa 4000 perché non sorvegliate. 
+
+Per gli umani, il problema è rappresentado dai cosidetti lupi confidenti, ovvero quelli che si sono abituati alla presenza dell'uomo, da cui sono dipesi sei dei sette attacchi registrati, di cui nessuno mortale. Per queste ragioni che è importante non dar loro da mangiare o dare confidenza. 
+I cinghiali, fuori dagli incidenti stradali, non hanno provato vittime, mentre gli orsi hanno fatto registrare 6 aggressioni di cui sono una mortale.
+Parliamo quindi di numeri molti bassi rispetto alla minaccia che possono fare percepire talvolta i media o di alcune politiche che propongono l'abbattimento, che potrebbe portare ad altri problemi, invece di misure di prevenzione come gli spray urticanti di cui si parla poco. Inoltre dal 2011 al 2021 la caccia ha ucciso  molte più persone degli animali selvatici: 209 morti e 682 feriti secondo vittimedellacaccia.org. La maggioranza delle vittime sono stati cacciatori, ma ci sono stati casi di gente che stava passeggiando nei boschi e addirittura persone colpite mentre erano dentro casa loro. 
+\end{mdframed}
+
 \subsection{Sicurezza}
 Come possono convivere individui con idee in conflitto?
 
@@ -3704,7 +3767,7 @@ Un'analisi di 15 studi ha rilevato che tenere un'arma da fuoco in casa, quasi ra
 
 In Italia, non esiste un rapporto ufficiale del Viminale sugli omicidi con armi da fuoco legalmente detenute, una mancanza significativa. Un’indagine svolta da Fire-Transcrime in collaborazione con l'Università Cattolica di Milano ha osservato che, nei paesi europei e, presumibilmente anche in Italia, gli omicidi con armi da fuoco tra il 2010 e il 2015 hanno causato vittime principalmente in ambito familiare (34\%) e interpersonale (32\%), mentre solo il 21\% è attribuibile a gruppi organizzati, il 10\% ad atti criminali e il 3\% a motivi socio-politici\endnote{\raggedright\url{https://www.rivistailmulino.it/a/legittima-difesa-una-modifica-ingannevole-e-pericolosa}}.
 
-Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza, dispositivi dissuasivi non letali, o soluzioni creative come la PaintCam\endnote{\raggedright\url{https://www.kickstarter.com/projects/paintcam/paintcam-face-recognition-and-paintball-firing-security-system}} una videocamera di sorveglianza che spara vernice e lacrimogeni agli intrusi. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni. 
+Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza, dispositivi dissuasivi non letali, o soluzioni creative come la PaintCam\endnote{\raggedright\url{https://www.kickstarter.com/projects/paintcam/paintcam-face-recognition-and-paintball-firing-security-system}} una videocamera di sorveglianza che spara vernice e lacrimogeni agli intrusi. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni, oltre ad aiutarci ad evitare lo scontro e le relative battaglie legali che possono superare le migliaia di euro.
 
 Passando dal livello privato a quello nazionale, le prospettive accademiche sulla correlazione tra la corsa agli armamenti e il favoreggiamento della guerra o della pace sono miste. Da un lato, una corsa agli armamenti è vista come un fattore che può aumentare il rischio di guerra esacerbando la tensione, la sfiducia e l'accumulo militare tra gli stati\endnote{\raggedright\url{https://journals.sagepub.com/doi/10.1177/084387140401600188}} \endnote{\raggedright\url{http://www.medra.org/servlet/MRService?hdl=10.1402/14198}}.
 
@@ -3713,71 +3776,6 @@ La corsa agli armamenti, inoltre, comporta la deviazione di ingenti risorse vers
 Dall'altro lato, alcune teorie sulla deterrenza sostengono che particolari corse agli armamenti, specialmente quelle che coinvolgono armi nucleari o un equilibrio di forze convenzionali, possano contribuire alla pace \endnote{\raggedright\url{https://www.semanticscholar.org/paper/33fcdac6b900c25feb502cce7604554dd82ad889}} \endnote{\raggedright\url{https://www.semanticscholar.org/paper/2188b0d615febc6c0acabcb1fc7265a588f8a0e3}}. 
 
 In sintesi, benché in specifici contesti il riarmo possa fungere da meccanismo di deterrenza, in generale favorisce maggiormente la guerra rispetto alla pace. Si ritiene che una pace duratura e sostenibile sia promossa in modo più affidabile attraverso la cooperazione internazionale e gli accordi di controllo degli armamenti, piuttosto che da una competizione nell'accumulo militare.
-
-
-
-
-
-
-La caccia è utile?
-
-La caccia, attualmente è utilizzata per fini ludici e per contenere la popolazione di animali. In Italia, uno degli animali che crea più preoccupazione è il cinghiale. Secondo dati ISPRA i cinghiali sono raddoppiati in 10 anni, passando da 500 mila del 2010 a 1 milione nel 2020 nonostante il numero dei cacciatori sia stabile dal
-1980\endnote{\raggedright\url{https://www.researchgate.net/publication/269636662\_Wild\_boar\_populations\_up\_numbers\_of\_hunters\_down\_A\_review\_of\_trends\_and\_implications\_for\_Europe}}. 
-
-Il cinghiale vive in gruppi familiari matriarcali, dove generalmente solo i due individui dominanti si riproducono. In una battuta si caccia questi individui sono i primi a morire, in quanto impegnati a far scappare giovani e cuccioli. In queste condizioni alterate dalla caccia, l'assenza delle figure dominanti, possono portare ad un numero maggiore di individui subalterni alla riproduzione. Inizia così una fase riproduttiva intensa, che vista la giovane età, può moltiplicare rapidamente la popolazione\endnote{\par 1) Apollonio M., R. Putman, S. Grignolio \& L. Bartoš 2011. Hunting seasons in relation to
-biological breeding seasons and the implications for the control or regulation of ungulate populations. In: M.
-Apollonio, R. Andersen \& R. Putman (eds.), Ungulate management in Europe: Problems and practices, Cambridge University
-Press, London, UK: 80-105.\par 2) Cahill S. \& D. Llimona 2004. Demographics of a wild boar Sus scrofa Linnaeus, 1758
-population on a metropolitan park in Barcelona. In: C. Fonseca, J. Herrero, A. Luís \& A. M. V. M. Soares (eds.), Wild
-boar research 2002, 4th International wild boar symposium, Galemys, 16 (n° especial): 37-52.\par 3) Canu A., Scandura,
-E. Merli, R. Chirichella, E. Bottero, F. Chianucci, A. Cutini \& M. Apollonio 2015. Reproductive phenology and
-conception synchrony in a natural wild boar population. Hystrix 26 (2): 77-84.\par 4) Dardaillon M. 1988. Wild boar
-social groupings and their seasonal changes in the Camargue, southern France. Z. Säugetierkunde 53: 22-30.\par 5)
-Delcroix I., R. Mauget \& J. P. Signoret 1990. Existence of synchronization of reproduction at the level of the social
-group of the European wild boar (Sus scrofa). J. Repr. Fert. 89: 613-617.\par 6) Eisenberg J. F. \& M. Lockhart 1972.
-An ecological reconnaisance of Wilpattu National Park, Ceylon. Smithsonian Inst. Press, Washington, D. C.\par 7)
-Gamelon M., A. Besnard, J.-M. Gaillard, S. Servanty, E. Baubet, S. Brandt \& O. Gimenez 2011. High hunting pressure
-selects for earlier birth date: wild boar as a case study. Evolution 65 (11): 3100-3112.\par 8) Gayet T., S. Devillard,
-M. Gamelon, S. Brandt, L. Say \& E. Baubet 2016. On the evolutionary consequences of increasing litter size with
-multiple paternity in wild boar (Sus scrofa scrofa). Evolution 70 (6): 1386–1397.\par 9) Graves H. B. 1984. Behaviour
-and Ecology of Wild and Feral Swine (Sus scrofa). Journal of Animal Science 58 (2): 482–492.\par 10) Herrero J., A.
-García-Serrano \& R. García-Gonzalez, 2008. Reproductive and demographic parameters in two Iberian wild boar Sus scrofa
-populations. Acta theriologica 53 (4): 355-364.\par 11) Istituto nazionale per la fauna selvatica (2002). Gli Ungulati
-in Italia. Status, distribuzione, consistenza, gestione e prelievo venatorio. Istituto nazionale per la fauna selvatica
-“Alessandro Chigi”, 61 pp.\par 12) Ježek M. 2012. The influence of sex mature of wild boar to reproduction in the Czech
-republic. Vliv pohlavního dospívání na reprodukci prasete divokého v České Republice. Doctoral thesis. Disertační
-práce. Praha, 72 pp.\par 13) Kaminski G., S. Brandt, E. Baubet \& C. Baudoin 2005. Life-history patterns in female wild
-boars (Sus scrofa): mother-daughter postweaning associations. Canadian Journal of Zoology 83: 474-480.\par 14) Marsan
-A., L. Schenone \& S. Spanò 2000. Il cinghiale in Liguria. II edizione. Regione Liguria, Struttura allevamento, caccia
-e pesca, 103 pp., 4 tavv.\par 15) Marsan A., S. Spanò \& C. Tognoni 1995. Management attempts of wild boar (Sus scrofa
-scrofa L.): first results and ongoing researches in Northern Apennines. Ibex 3: 219-221.\par 16) Massei G., J.
-Kindberg, A. Licoppe, D. Gačić, N. Šprem, J. Kamler, E. Baubet, U. Hohmann, A. Monaco, J. Ozoliņš, S. Cellina, T.
-Podgórski, C. Fonseca, N. Markov, B. Pokorny, C. Rosell \& A. Náhlik 2015. Wild boar populations up, numbers of hunters
-down? A review of trends and implications for Europe. Pest Management Science 71 (4): 492-500.\par 17) Mauget R. 1982.
-Seasonality of reproduction in the wild boar. In: D. J. A. Cole \& G. R. Foxcroft (eds.), Control of pig reproduction,
-Butterworth, London: 509–526.\par 18) Mazzoni della Stella R., F. Calovi \& L. Burrini 1995. The wild boar management
-in a province of the Central Italy. Ibex 3: 213-216.\par 19) Meynhardt H. 1986. Schwarzwild-Report. Mein Leben unter
-Wildschweinen. Naumann, Leipzig, 223 pp.\par 20) Moretti M. 1995. Birth distribution, structure and dynamics of a
-hunted mountain population of wild boars (Sus scrofa L.), Ticino, Switzerland. Ibex 3: 192-196.\par 21) Oliver W. \& K.
-Leus 2011. Sus scrofa. IUCN Red List of threatened species, version 2011.2, 6 pp.\par 22) Scillitani L., A. Monaco \&
-S. Toso 2010. Do intensive drive hunts affect wild boar (Sus scrofa) spatial behaviour in Italy? Some evidences and
-management implications. European Journal of Wildlife Research 56 (3): 307–318.\par 23) Servanty S., J.-M. Gaillard, C.
-Toïgo, S. Brandt \& E. Baubet 2009. Pulsed resources and climate-induced variation in the reproductive traits of wild
-boar under high hunting pressure. J. animal ecology 78 (6): 1278-1290.\par 24) Thurfjell H., G. Spong \& G. Ericsson
-2013. Effects of hunting on wild boar Sus scrofa behaviour. Wildlife Biology 19 (1): 87-93.\par 25) Toïgo C., S.
-Servanty, J.-M. Gaillard, S. Brandt \& E. Baubet 2008. Disentangling natural from hunting mortality in an intensively
-hunted wild boar population. J. Wildlife Management 72 (7): 1532-1539.\par 26) Scillitani L., A. Monaco \& S. Toso
-2010. Do intensive drive hunts affect wild boar (Sus scrofa) spatial behaviour in Italy? Some evidences and management
-implications. European Journal of Wildlife Research 56 (3): 307–318. }. 
-
-In condizioni favorevoli, alcuni ecosistemi mostrano una buona capacità di resilienza, ma il ritorno a un equilibrio ecologico non è garantito né sempre spontaneo. In Italia negli ultimi anni si sta assistendo a una ricomparsa del lupo, unico predatore dei grandi ungulati e non solo, infatti questo animale è utile al contenimento di altre specie invasive come le nutrie. 
-Servirà diverso tempo prima che i lupi possano formare branchi numerosi in grado di cacciare grandi prede selvatiche, portandoli in alcuni casi a rivolgersi a più facili prede domestiche, dalle pecore ai piccoli cani. In un ecosistema in equilibrio, la densità dei carnivori tende ad autoregolarsi in funzione delle prede disponibili.
-
-Una ricerca del Wwf condotta in Svizzera ha osservato che i lupi ogni anno uccidono circa 200 pecore non protette da recinto elettrificato e, ne muoiono per malattia o cadute dai precipizi circa 4000 perché non sorvegliate. 
-
-Per gli umani, il problema è rappresentado dai cosidetti lupi confidenti, ovvero quelli che si sono abituati alla presenza dell'uomo, da cui sono dipesi sei dei sette attacchi registrati, di cui nessuno mortale. Per queste ragioni che è importante non dar loro da mangiare o dare confidenza. 
-I cinghiali, fuori dagli incidenti stradali, non hanno provato vittime, mentre gli orsi hanno fatto registrare 6 aggressioni di cui sono una mortale.
-Parliamo quindi di numeri molti bassi rispetto alla minaccia che possono fare percepire talvolta i media o di alcune politiche che propongono l'abbattimento, che potrebbe portare ad altri problemi, invece di misure di prevenzione come gli spray urticanti di cui si parla poco. Inoltre dal 2011 al 2021 la caccia ha ucciso  molte più persone degli animali selvatici: 209 morti e 682 feriti secondo vittimedellacaccia.org. La maggioranza delle vittime sono stati cacciatori, ma ci sono stati casi di gente che stava passeggiando nei boschi e addirittura persone colpite mentre erano dentro casa loro. 
 
 \subsection{Lavoro e scuola}
 
@@ -4504,7 +4502,7 @@ Prima di concludere, per finire in bellezza, in controtendenza con l'idea che il
 
 \subsubsection{Copertine}
 
-Le due copertine di questo libro raccontano un unico viaggio: quello dello sguardo.
+Le due copertine di questo libro raccontano un unico viaggio: quello dello sguardo che impara a osservare ciò che c’è, e non ciò che vorremmo ci fosse.
 La copertina iniziale ci invita a distogliere l'attenzione dalla tempesta dei pensieri che infuria nella mente, per portarla alla solida serenità della montagna delle sensazioni corporee.
 La serenità non è una destinazione, ma una direzione dello sguardo.
 
